Attempt to fix header image size on mobile

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -5,40 +5,11 @@
     rgba(255, 255, 255, 0.2)
   ),
   image-url("fishing_backdrop.jpg");
-  background-attachment: fixed;
-  background-position: center;
+  background-position: top;
+  background-size: auto 100vh;
   background-repeat: no-repeat;
   background-size: cover;
-
   height: 80vh;
-}
-
-.header-content {
-  background-color: rgba(0,0,0,0.5);
-  border-radius: 10px;
-  padding: 1em;
-}
-
-.parallax-header .container {
-  padding-top: 230px;
-}
-
-header h1 {
-  color: white;
-  text-shadow: 2px 2px #10182fff;
-}
-
-.content {
-  padding-top: 1em;
-  padding-left: 1em;
-  padding-right: 1em;
-  border-radius: 10px;
-  background-color: #f1f6f7ff;
-}
-
-.letter-translations {
-  margin-top: 2em;
-  margin-bottom: 2em;
 }
 
 .open-letter-content {
@@ -49,76 +20,3 @@ header h1 {
   image-url("fishing_backdrop_alt.jpg");
 }
 
-#letter-translations-accordion {
-  .accordion-button {
-    color: white;
-  }
-
-  form.button_to {
-    display: inline;
-  }
-}
-
-button.download-button {
-    width: 240px;
-    padding: 20px;
-    margin: 10px;
-    display: inline;
-}
-
-blockquote {
-  font-size: 150%;
-  font-weight: bold;
-  margin-left: 2em;
-  margin-right: 2em;
-  padding: 10px;
-  color: white;
-  font-family: serif;
-
-  p {
-    margin-bottom: 0;
-  }
-}
-
-.logo-image-container {
-  height: 200px;
-  white-space: nowrap;
-  text-align: center;
-}
-
-.logo-carousel {
-  max-height: 200px;
-  img {
-    vertical-align: middle;
-  }
-}
-
-.helper {
-  display: inline-block;
-  height: 100%;
-  vertical-align: middle;
-}
-
-.tns-outer {
-  position: relative;
-}
-
-[data-controls] {
-  border: 0;
-  padding: 0;
-  font-size: 30px;
-  position: absolute;
-  top: 50%;
-  margin-top: -18px;
-  z-index: 1;
-  background: transparent;
-}
-[data-controls="prev"] {
-  left: 20px;
-}
-[data-controls="next"] {
-  right: 20px;
-}
-[data-action="stop"] {
-  display: none;
-}
